# race-monitor-py

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml  release-please-config.json  renovate.json
.github/workflows/: docs.yml  pytest.yml  python-syntax.yml  release-please.yml  uv-lock-check.yml  uv-lock-sync.yml
docs/: api-coverage.md
src/race_monitor/: __init__.py  _core.py  _protocol.py  _rate_limiter.py  async_client.py  client.py  types.py
src/race_monitor/_namespaces/: account.py  common.py  live.py  race.py  results.py
tests/: conftest.py  test_client.py  test_core.py  test_protocol.py  test_rate_limiter.py
tests/test_namespaces/: test_account.py  test_common.py  test_live.py  test_race.py  test_results.py
