[project]
name = "race-monitor"
dynamic = ["version"]
description = "A Python library for Race Monitor"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
]

[tool.hatch.version]
source = "regex"
path = "VERSION"
pattern = "^(?P<version>[^\n]+)$"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/race_monitor"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pdoc>=14",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.pdoc]
output-directory = "docs/api"
