[project]
name = "race-monitor"
dynamic = ["version"]
description = "A Python library for Race Monitor"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "WOT-Lemons"}]
license = {file = "LICENSE"}
keywords = ["race monitor", "racing", "motorsport", "api", "client"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "httpx>=0.27",
]

[tool.hatch.version]
source = "regex"
path = "VERSION"
pattern = "^(?P<version>[^\n]+)$"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/race_monitor"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pdoc>=14",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.pdoc]
output-directory = "docs/api"
