[project]
name = "race-monitor"
version = "0.4.0"
description = "A Python library for Race Monitor"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "WOT-Lemons"}]
license = {file = "LICENSE"}
keywords = ["race monitor", "racing", "motorsport", "api", "client"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://wot-lemons.github.io/race-monitor-py"
Source = "https://github.com/WOT-Lemons/race-monitor-py"
"Bug Tracker" = "https://github.com/WOT-Lemons/race-monitor-py/issues"
Changelog = "https://github.com/WOT-Lemons/race-monitor-py/blob/main/CHANGELOG.md"

[build-system]
requires = ["uv-build>=0.6.0,<0.12"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pdoc>=14",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.pdoc]
output-directory = "docs/api"
